--- a/about/index.html
+++ b/about/index.html
@@ -16,10 +16,8 @@
         href="https://fonts.googleapis.com/css2?family=Audiowide&family=Kreon:wght@300&family=Permanent+Marker&display=swap"
         rel="stylesheet">
 
-
-    <link rel="stylesheet" href="about.css">
-    <link rel="stylesheet" href="responsive.css">
-
+        <link rel="stylesheet" href="about.css">
+        <link rel="stylesheet" href="responsive.css">
 </head>
 
 <body>
@@ -32,14 +30,109 @@
             <div id="about" class="link">About</div>
         </div>
     </header>
-    <div id="cs">Coming Soon</div>
 
-    <div id="footer">
-        <div>            
-            © 2022-Present. Beyond Me Btw created by <a href="https://beyondmebtw.com/about" style="color: black; text-decoration: none; font-weight: bold;" target="_blank">Pranav Veeraghanta.</a>
+    <div class="bento-container">
+        <!-- Who I Am Section -->
+        <div class="bento-item who-i-am">
+            <h2 class="section-title">Who I Am</h2>
+            <p>Hey there! I'm Pranav Veeraghanta, a 20-year-old college student passionate about technology, storytelling, and innovation. Post-pandemic, I've been exploring new ways to connect with the world and make an impact through my creative endeavors.</p>
+            <p style="margin-top: 15px;">At Beyond Me Btw, I share my journey, projects, and insights as I navigate through college life and beyond. I believe in the power of storytelling to inspire change and create meaningful connections.</p>
+            <p style="margin-top: 15px;">When I'm not coding or writing, you can find me exploring new hiking trails, experimenting with photography, or engaging in deep conversations about the future of technology.</p>
+        </div>
+
+        <!-- Image Slider Section -->
+        <div class="bento-item image-slider">
+            <img class="slider-image active" src="https://beyondmebtw.com/assets/images/pv2.jpeg" alt="Pranav speaking">
+            <img class="slider-image" src="https://beyondmebtw.com/assets/images/pv3.jpg" alt="Pranav wondering">            
+        </div>
+
+        <!-- Experience Section -->
+        <div class="bento-item experience">
+            <h2 class="section-title">Experience</h2>
+            <div class="experience-item">
+                <div class="experience-title">Web Development Intern</div>
+                <div class="experience-company">TechInnovate Solutions</div>
+                <p>Developed responsive websites using modern frameworks and collaborated with a team of designers to implement user-friendly interfaces.</p>
+            </div>
+            <div class="experience-item">
+                <div class="experience-title">Content Creator</div>
+                <div class="experience-company">Digital Storytellers Network</div>
+                <p>Created engaging content for various platforms, focusing on technology trends and educational resources for beginners.</p>
+            </div>
+            <div class="experience-item">
+                <div class="experience-title">Research Assistant</div>
+                <div class="experience-company">University Innovation Lab</div>
+                <p>Assisted in research projects focused on emerging technologies and their impact on society.</p>
+            </div>
+        </div>
+
+        <!-- Skills Section -->
+        <div class="bento-item skills">
+            <h2 class="section-title">Skills</h2>
+            <p>I've developed a diverse skillset through academic pursuits and personal projects:</p>
+            <div class="skill-list">
+                <div class="skill-tag">HTML/CSS</div>
+                <div class="skill-tag">JavaScript</div>
+                <div class="skill-tag">React</div>
+                <div class="skill-tag">Python</div>
+                <div class="skill-tag">UI/UX Design</div>
+                <div class="skill-tag">Content Writing</div>
+                <div class="skill-tag">Digital Marketing</div>
+                <div class="skill-tag">Project Management</div>
+                <div class="skill-tag">Data Analysis</div>
+                <div class="skill-tag">Public Speaking</div>
+            </div>
+        </div>
+
+        <!-- Projects Section -->
+        <div class="bento-item projects">
+            <h2 class="section-title">Projects</h2>
+            <p>A showcase of my recent work:</p>
+            <ul style="margin-left: 20px; margin-top: 10px;">
+                <li><strong>Personal Blog</strong>: Built and maintain a platform for sharing my thoughts and experiences.</li>
+                <li><strong>Community App</strong>: Developed an application to connect students with similar interests.</li>
+                <li><strong>Data Visualization Tool</strong>: Created interactive dashboards for educational purposes.</li>
+            </ul>
+        </div>
+
+        <!-- Quotes Section -->
+        <div class="bento-item quotes">
+            <h2 class="section-title">Favorite Quotes</h2>
+            <div class="quote">
+                <p>"The best way to predict the future is to create it."</p>
+                <div class="quote-author">- Peter Drucker</div>
+            </div>
+            <div class="quote">
+                <p>"Innovation distinguishes between a leader and a follower."</p>
+                <div class="quote-author">- Steve Jobs</div>
+            </div>
+        </div>
+
+        <!-- Blog Preview Section -->
+        <div class="bento-item blog-preview">
+            <h2 class="section-title">Latest Blog Posts</h2>
+            <div class="blog-item">
+                <div class="blog-title">How Technology Shaped My Pandemic Experience</div>
+                <div class="blog-date">March 15, 2024</div>
+            </div>
+            <div class="blog-item">
+                <div class="blog-title">The Future of Web Development: My Perspective</div>
+                <div class="blog-date">February 28, 2024</div>
+            </div>
+            <div class="blog-item">
+                <div class="blog-title">Finding Balance: College Life and Personal Projects</div>
+                <div class="blog-date">January 10, 2024</div>
+            </div>
         </div>
     </div>
-    
+
+    <div id="footer">
+        <div>
+            © 2022-Present. Beyond Me Btw created by <a href="https://beyondmebtw.com/about"
+                style="color: black; text-decoration: none; font-weight: bold;" target="_blank">Pranav Veeraghanta.</a>
+        </div>
+    </div>
+
     <script src="about.js"></script>
 </body>
 
