--- a/about/index.html
+++ b/about/index.html
@@ -12,12 +12,13 @@
 
     <link rel="icon" type="image/x-icon" href="https://beyondmebtw.com/assets/images/favicon.ico">
     <meta property="og:image" content="https://beyondmebtw.com/assets/images/favicon.ico">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Audiowide&family=Kreon:wght@300&family=Permanent+Marker&display=swap"
-        rel="stylesheet">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Delius&family=Kreon:wght@300&family=Permanent+Marker&display=swap');
+    </style>
 
-        <link rel="stylesheet" href="about.css">
-        <link rel="stylesheet" href="responsive.css">
+
+    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="responsive.css">
 </head>
 
 <body>
@@ -35,15 +36,20 @@
         <!-- Who I Am Section -->
         <div class="bento-item who-i-am">
             <h2 class="section-title">Who I Am</h2>
-            <p>Hey there! I'm Pranav Veeraghanta, a 20-year-old college student passionate about technology, storytelling, and innovation. Post-pandemic, I've been exploring new ways to connect with the world and make an impact through my creative endeavors.</p>
-            <p style="margin-top: 15px;">At Beyond Me Btw, I share my journey, projects, and insights as I navigate through college life and beyond. I believe in the power of storytelling to inspire change and create meaningful connections.</p>
-            <p style="margin-top: 15px;">When I'm not coding or writing, you can find me exploring new hiking trails, experimenting with photography, or engaging in deep conversations about the future of technology.</p>
+            <p>Hey there! I'm Pranav Veeraghanta, a 20-year-old college student passionate about technology,
+                storytelling, and innovation. Post-pandemic, I've been exploring new ways to connect with the world and
+                make an impact through my creative endeavors.</p>
+            <p style="margin-top: 15px;">At Beyond Me Btw, I share my journey, projects, and insights as I navigate
+                through college life and beyond. I believe in the power of storytelling to inspire change and create
+                meaningful connections.</p>
+            <p style="margin-top: 15px;">When I'm not coding or writing, you can find me exploring new hiking trails,
+                experimenting with photography, or engaging in deep conversations about the future of technology.</p>
         </div>
 
         <!-- Image Slider Section -->
         <div class="bento-item image-slider">
             <img class="slider-image active" src="https://beyondmebtw.com/assets/images/pv2.jpeg" alt="Pranav speaking">
-            <img class="slider-image" src="https://beyondmebtw.com/assets/images/pv3.jpg" alt="Pranav wondering">            
+            <img class="slider-image" src="https://beyondmebtw.com/assets/images/pv3.jpg" alt="Pranav wondering">
         </div>
 
         <!-- Experience Section -->
@@ -52,12 +58,14 @@
             <div class="experience-item">
                 <div class="experience-title">Web Development Intern</div>
                 <div class="experience-company">TechInnovate Solutions</div>
-                <p>Developed responsive websites using modern frameworks and collaborated with a team of designers to implement user-friendly interfaces.</p>
+                <p>Developed responsive websites using modern frameworks and collaborated with a team of designers to
+                    implement user-friendly interfaces.</p>
             </div>
             <div class="experience-item">
                 <div class="experience-title">Content Creator</div>
                 <div class="experience-company">Digital Storytellers Network</div>
-                <p>Created engaging content for various platforms, focusing on technology trends and educational resources for beginners.</p>
+                <p>Created engaging content for various platforms, focusing on technology trends and educational
+                    resources for beginners.</p>
             </div>
             <div class="experience-item">
                 <div class="experience-title">Research Assistant</div>
@@ -89,9 +97,12 @@
             <h2 class="section-title">Projects</h2>
             <p>A showcase of my recent work:</p>
             <ul style="margin-left: 20px; margin-top: 10px;">
-                <li><strong>Personal Blog</strong>: Built and maintain a platform for sharing my thoughts and experiences.</li>
-                <li><strong>Community App</strong>: Developed an application to connect students with similar interests.</li>
-                <li><strong>Data Visualization Tool</strong>: Created interactive dashboards for educational purposes.</li>
+                <li><strong>Personal Blog</strong>: Built and maintain a platform for sharing my thoughts and
+                    experiences.</li>
+                <li><strong>Community App</strong>: Developed an application to connect students with similar interests.
+                </li>
+                <li><strong>Data Visualization Tool</strong>: Created interactive dashboards for educational purposes.
+                </li>
             </ul>
         </div>
 
