--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
     <meta name="description"
         content="Pranav Veeraghanta, A 20 year old college student making the best out of life post pandemic. He is here to explore and enjoy life. Beyond Me Btw celebrates his ability of storytelling and innovation.">
 
@@ -13,7 +12,7 @@
     <link rel="icon" type="image/x-icon" href="https://beyondmebtw.com/assets/images/favicon.ico">
     <meta property="og:image" content="https://beyondmebtw.com/assets/images/favicon.ico">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Delius&family=Kreon:wght@300&family=Permanent+Marker&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Delius&family=Kavoon&family=Kreon:wght@300&family=Permanent+Marker&display=swap');
     </style>
 
 
@@ -41,44 +40,108 @@
             <img class="slider-image" src="https://beyondmebtw.com/assets/images/pv3.jpg" alt="Pranav wondering">
         </div>
 
-        <!-- Who I Am Section -->
+        <!-- Updated Who I Am Section -->
         <div class="bento-item who-i-am">
-            <h2 class="section-title">Who I Am</h2>
-            <p>Hey there! I'm Pranav Veeraghanta, a 20-year-old college student passionate about technology,
-                storytelling, and innovation. Post-pandemic, I've been exploring new ways to connect with the world and
-                make an impact through my creative endeavors.</p>
-            <p style="margin-top: 15px;">At Beyond Me Btw, I share my journey, projects, and insights as I navigate
-                through college life and beyond. I believe in the power of storytelling to inspire change and create
-                meaningful connections.</p>
-            <p style="margin-top: 15px;">When I'm not coding or writing, you can find me exploring new hiking trails,
-                experimenting with photography, or engaging in deep conversations about the future of technology.</p>
-        </div>
+            <h2 class="section-title whoami">Who Am I?</h2>
+            <div class="abouttext">
+                <!-- Introduction Section (Normal) -->
+                <div class="intro-section">
+                    <p>
+                        <strong>I'm Pranav Veeraghanta.</strong> Tech enthusiast, motorsport junkie, music addict and a
+                        gaming geek.
+                    </p>
+                    <p>
+                        <strong>Beyond Me Btw</strong> started as a way for me to explore the world without fear. After
+                        a tough
+                        pandemic, I wanted to push myself out of my comfort zone and embrace new experiences. Writing
+                        blogs and sharing my work isn't about chasing fame (though I won't deny I love the recognition).
+                        At its core, it's about my passion and telling my journey, unfiltered.
+                    </p>
+                </div>
 
+                <!-- Cards in 2-per-row layout -->
+                <div class="cards-container">
+                    <!-- Tech and Writing Card -->
+                    <div class="about-card">
+                        <h3><span class="about-icon">💻</span> Tech and Writing</h3>
+                        <p>
+                            Tech, for me, isn't just about coding, it's about building, solving, and imagining what's
+                            next. AI and
+                            ML fascinate me because of how they can shape the world around us.
+                        </p>
+                        <p>
+                            I love sharing my insights through writing, exploring complex concepts and making them
+                            accessible to others.
+                        </p>
+                    </div>
+
+                    <!-- Music Card -->
+                    <div class="about-card">
+                        <h3><span class="about-icon">🎵</span> Musical Journey</h3>
+                        <p>
+                            Music has always been a huge part of my life. I don't stick to genres, if it sounds cool,
+                            I'm into
+                            it. From playing Adele's ballads to movie themes, I love bringing songs to life on the
+                            keyboard.
+                        </p>
+                        <p>
+                            Beyond just playing, I've sang professionally in choir and solo performances.
+                        </p>
+                    </div>
+
+                    <!-- Motorsports Card -->
+                    <div class="about-card">
+                        <h3><span class="about-icon">🏎️</span> Motorsports Mania</h3>
+                        <p>
+                            It's not just about the speed for me. It's the strategy, logistics, engineering and the
+                            sheer madness behind these machines. Watching motorsports made me realize how much I love
+                            cars and bikes, not
+                            just as vehicles, but as marvels of engineering and precision.
+                        </p>
+                        <p>
+                            I am an avid Formula 1 fan and enjoy Endurance racing as well.
+                        </p>
+                    </div>
+
+                    <!-- Fun Facts Card -->
+                    <div class="about-card">
+                        <h3><span class="about-icon">🎮</span> Beyond Work</h3>
+                        <p>
+                            When I'm not coding, writing or knee-deep in a project, you'll find me jamming on the
+                            keyboard, doomscrolling through social media or procrastinating.
+                        </p>
+                        <p>
+                            Oh, and if you ever need someone to flawlessly pronounce
+                            <strong>Taumatawhakatangihangakoauauotamateaturipukakapikimaungahoronukupokaiwhenuakitanatahu</strong>,
+                            I got you.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Experience Section -->
         <div class="bento-item experience">
             <h2 class="section-title">Experience</h2>
             <div class="experience-container">
                 <!-- Most recent experience first in DOM for mobile -->
                 <div class="organization-group">
-                    <div class="experience-where">Gradient Club</div>
+                    <div class="experience-where">Gradient Club (The AIML Student Club at BMSCE)</div>
 
                     <div class="role-container">
                         <div class="experience-role">Tech Head</div>
-                        <div class="experience-duration">Jan 2023 - Present</div>
+                        <div class="experience-duration">Jan 2025 - Present</div>
                         <div class="experience-about">
                             Leading the technical team in developing club projects and initiatives.
-                            Mentoring junior members in web development and design principles.
-                            Overseeing all technical aspects of club events and workshops.
+                            Mentoring junior members and overseeing all technical aspects of club events.
                         </div>
                     </div>
 
                     <div class="role-container">
                         <div class="experience-role">Tech Team Member</div>
-                        <div class="experience-duration">Aug 2022 - Dec 2022</div>
+                        <div class="experience-duration">Feb 2024 - Jan 2025</div>
                         <div class="experience-about">
-                            Collaborated on developing club websites and technical projects.
+                            Collaborated on developing club website and technical projects.
                             Assisted in organizing and conducting technical workshops.
-                            Contributed to brainstorming sessions for new initiatives.
                         </div>
                     </div>
                 </div>
@@ -90,8 +153,8 @@
                         <div class="experience-role">Blog Writer & Creator</div>
                         <div class="experience-duration">Jun 2021 - Present</div>
                         <div class="experience-about">
-                            Creating engaging content about technology, personal growth, and college life.
-                            Developing tutorials and guides for beginners in web development.
+                            Creating engaging content about technology, F1 and Movies/Tv Shows.
+                            Developing tutorials and guides on various tech concepts.
                             Sharing personal experiences and lessons learned through storytelling.
                         </div>
                     </div>
@@ -115,7 +178,8 @@
                         <div class="skill-tag">Next.js</div>
                         <div class="skill-tag">Vercel</div>
                     </div>
-                    <div class="skill-application">Used to create responsive websites including this personal portfolio
+                    <div class="skill-application">Used to create responsive and cool websites including this personal
+                        portfolio
                     </div>
                 </div>
 
@@ -126,7 +190,7 @@
                         <div class="skill-tag">Content Writing</div>
                         <div class="skill-tag">Digital Marketing</div>
                     </div>
-                    <div class="skill-application">Applied to improve user experience in all web development projects
+                    <div class="skill-application">Applied to improve user experience in various projects
                     </div>
                 </div>
 
@@ -137,7 +201,7 @@
                         <div class="skill-tag">Event Management</div>
                         <div class="skill-tag">Public Speaking</div>
                     </div>
-                    <div class="skill-application">Coordinated team projects during internship at TechInnovate Solutions
+                    <div class="skill-application">Coordinated big events and projects
                     </div>
                 </div>
             </div>
@@ -147,17 +211,16 @@
         <div class="bento-item quotes">
             <h2 class="section-title">Favorite Quotes</h2>
             <div class="quote">
-                <p>"The best way to predict the future is to create it."</p>
-                <div class="quote-author">- Peter Drucker</div>
+                <p></p>
+                <div class="quote-author"></div>
             </div>
             <div class="quote">
-                <p>"Innovation distinguishes between a leader and a follower."</p>
-                <div class="quote-author">- Steve Jobs</div>
+                <p></p>
+                <div class="quote-author"></div>
             </div>
             <div class="quote">
-                <p>"The most powerful person in the world is the storyteller. The storyteller sets the vision, values
-                    and agenda of an entire generation."</p>
-                <div class="quote-author">- Steve Jobs</div>
+                <p></p>
+                <div class="quote-author"></div>
             </div>
         </div>
     </div>
