--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/x-icon" href="https://beyondmebtw.com/assets/images/favicon.ico">
     <meta property="og:image" content="https://beyondmebtw.com/assets/images/favicon.ico">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Delius&family=Kreon:wght@300&family=Permanent+Marker&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Delius&family=Kavoon&family=Kreon:wght@300&family=Permanent+Marker&display=swap');
     </style>
 
     <link rel="stylesheet" href="css/styles.css">
@@ -72,7 +72,7 @@
 
         <!-- Welcome section -->
         <div class="bento-item welcome-section">
-            <h2 class="section-title">Hello There!</h2>
+            <div class="section-title">Hello There!</div>
             <p class="welcome-text">
                 I'm <b>Pranav Veeraghanta</b>, a college student with a passion for movies, music and living life to the
                 fullest.
@@ -196,7 +196,7 @@
 
         <!-- Latest Post -->
         <div class="bento-item latest-post">
-            <div class="latest-post-header">Latest Post!</div>
+            <div class="section-title">Latest Post!</div>
             <div class="latest-post-content">
                 <img src="" alt="Latest-ost" class="latest-post-img">
                 <div class="latest-post-info">
